docs/examples/valid/extension/switch/defaultFallthroughSwitch.wacc
begin
  switch on
  case true:
    println "True"
    fallthrough
  default:
    println "Default"
  end
end

