docs/examples/invalid/syntaxErr/extension/switch/noColonSwitch.wacc
begin
  switch 5
		case 4:
			println "4"
    default:
      println "Default"
end
